--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=912426abed994f01d2a314a610681134
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
