réinstallation forcée après problème de configuration

--- a/.env
+++ b/.env
@@ -15,11 +15,11 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=912426abed994f01d2a314a610681134
+APP_SECRET=9f50516bdfb2d7eec8e27e12952db207
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost:1025
+# MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
