trad+modification du formulaire d'enregistrement

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=9f50516bdfb2d7eec8e27e12952db207
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
